Complement previous commit

--- a/css/page-custom.css
+++ b/css/page-custom.css
@@ -16,6 +16,7 @@ background:#e3e2e2!important
     padding: 0 0px 9px 120px !important;
     line-height: 41px !important;
     top: 1px !important;
+    color: #333
 }
 
 ::selection {
