--- a/css/page-custom.css
+++ b/css/page-custom.css
@@ -9,8 +9,8 @@ background:#e3e2e2!important
 
 .logo,logo {
     width: 315px !important;
-    background: url(./press/press-kit/img/logotype_colored.svg) no-repeat no-repeat 1px 4px !important;
-    background-size: auto;
+    background: url(../press/press-kit/img/logotype_colored.svg) no-repeat no-repeat 1px 4px !important;
+    background-size: auto !important;
     background-size: 120px !important;
     padding: 0 0px 9px 120px !important;
     line-height: 41px !important;
