fix header nav icon color CSS

--- a/css/page-custom.css
+++ b/css/page-custom.css
@@ -18,6 +18,7 @@ background:#e3e2e2!important
     color:#333!important
 }
 
+header nav ul li{color:#333!important}
 header nav ul li p{color:#333!important}
 
 ::selection {
